/*
 * $Id: ChangeLog,v 1.2468 2004/03/03 13:20:54 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-03 22:30 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * config/dos/global.cf
    ! Fixed GT library linking order.
  * contrib/libct/color.prg
    + Added INVERTATTR() function.
  * contrib/libct/ctmisc.prg
    + Added EXENAME() function.
  * contrib/libct/disk.c
    + Added NUMDISKL() function (only DJGPP version).
  * contrib/libct/files.c
    + Added FILESMAX() function (only DJGPP version).
    + Fixed SETFDATI() to work on DJGPP.
  * contrib/libct/print.c
    + Added PRINTSEND() function (only DJGPP version).
  * tests/Makefile
    ! Fixed to work on DOS.

2004-03-03 14:18 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/odbc/odbc.c
    ! fixed warning on bOut for mingw32
  * source/debug/debugger.prg
    ! fixed warning on function return
  * source/gtwvt/gtwvt.c
    ! added #define HB_OS_WIN_32_USED to fix warnigns in mingw32

2004-03-03 03:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/classes.h
    + Added member pDestructor to CLASS structure
    + Added void hb_clsFinalize( PHB_ITEM pObject );
    + Added extern HB_SYMB  hb_symDestructor;

  * source/vm/classes.c
    + Added HB_SYMB  hb_symDestructor;
    + Added void hb_clsFinalize( PHB_ITEM pObject );
      + Added support for Detructors

  * source/vm/arrays.c
    + Added call to hb_clsFinalize() from hb_arrayReleaseBase() and hb_arrayReleaseGarbage()

  * source/rtl/dumpvar.prg
  * include/hboo.ch
    * Changed unused HB_OO_MSG_CLSMTHD with new HB_OO_MSG_DESTRUCTOR as 7

  * include/hbclass.ch
    + Added support for new syntax: DESTRUCTOR <MethodName>

  * source/rtl/tclass.prg
    + Added Data :nDestructor and Method :SetDestructor()

  * source/vm/hvm.c