@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2468 2004/03/03 13:20:54 lf_sfnet Exp $
+ * $Id: ChangeLog,v 1.2469 2004/03/03 19:27:06 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-03 16:35 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
+  * include/hbset.h
+  * include/set.ch
+  * source/rtl/set.c
+  * source/pptable.c
+  * source/vm/hvm.c
+  * tests/bkgtst2.prg
+    ! Renamed SET_BGTASKPCODES to SET_BACKGROUNDTICK
 
 2004-03-03 22:30 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * config/dos/global.cf
